prodinfo-exposeLB-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage-lb
  labels:
    app: productpage
    service: productpage
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
    targetPort: 8080
  selector:
    app: productpage
